--- a/demo/views/states/contact.html
+++ b/demo/views/states/contact.html
@@ -1,5 +1,7 @@
 <div>
-  <h1>Contact</h1>
+  <div class="paginator-section">
+    <h1>Contact</h1>
+  </div>
   <form>
     <div class="form-group">
       <label for="views/states/contact/email">Email address</label>
