--- a/demo/views/components/demo.css
+++ b/demo/views/components/demo.css
@@ -2,9 +2,25 @@
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+}
+
+.dismissible-popup {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  z-index: 1;
+  width: 350px;
+  padding: 30px;
+  background-color: rgba(0,0,0,0.85);
+  color: #fff;
+}
+
 .demo-component {
-  position: relative;
-  height: 500px;
+  position: fixed;
+  height: 100%;
+  width: 100%;
 }
 
 .demo-component > .nav {
