Render header and footer

--- a/demo/views/components/demo.html
+++ b/demo/views/components/demo.html
@@ -22,17 +22,9 @@
   <div class="workspace pagination-workspace">
     <div class="viewport">
       <tmtkn-paginator>
-        <tmtkn-page-headers>
-          <tmtkn-page-header data-ui-view="header">
-            <div>
-              <p>Header</p>
-            </div>
-          </tmtkn-page-header>
-        </tmtkn-page-headers>
-        <tmtkn-paginator-content data-ui-view></tmtkn-paginator-content>
-        <tmtkn-page-footers>
-          <tmtkn-page-footer data-ui-view="footer"></tmtkn-page-footer>
-        </tmtkn-page-footers>
+        <tmtkn-page-headers data-ui-view="header"></tmtkn-page-headers>
+        <tmtkn-paginator-content data-ui-view="content"></tmtkn-paginator-content>
+        <tmtkn-page-footers data-ui-view="footer"></tmtkn-page-footers>
       </tmtkn-paginator>
     </div>
   </div>
