--- a/demo/views/components/demo.html
+++ b/demo/views/components/demo.html
@@ -5,6 +5,22 @@
       This demonstrates the power of <code>angular-paginator</code> on listening to <code>onDOMSubtreeModified</code> event
       and the ability to copy the event and data of the elements.
     </p>
+    <p>
+      Try printing this page! Press <kbd>Ctrl</kbd> + <kbd>P</kbd> or (<kbd>Cmd</kbd> + <kbd>P</kbd> if you're in Mac). Follow these instructions:
+    </p>
+    <ul>
+      <li>Make sure to disable margins because <code>angular-paginator</code> does this for you ;)</li>
+      <li>Select the correct page size (current setting is <strong>Letter, 8.5&Prime; &times; 11.0&Prime;</strong>)</li>
+      <li>???</li>
+      <li>Profit!</li>
+    </ul>
+    <p>
+      Make sure to visit the project repos:
+    </p>
+    <ul>
+      <li><a href="https://github.com/Temoto-kun/jquery-paginator">jquery-paginator</a></li>
+      <li><a href="https://github.com/Temoto-kun/angular-paginator">angular-paginator</a></li>
+    </ul>
     <div>
       <button data-ng-click="$ctrl.popupVisible = false;">Got it</button>
     </div>
