--- a/demo/views/components/counter.html
+++ b/demo/views/components/counter.html
@@ -1,4 +1,4 @@
-<div class="cookie-counter">
+<div class="cookie-counter page-block">
   <div>
     <label>Cookies in jar: </label><input type="number" min="0" data-ng-change="$ctrl.onChange({ $count: $ctrl.cookieCount })" data-ng-model="$ctrl.cookieCount">
   </div>
