--- a/demo/views/components/demo.html
+++ b/demo/views/components/demo.html
@@ -26,6 +26,7 @@
     </div>
   </div>
   <nav class="nav nav-component">
+    <h2 class="title">Navigation</h2>
     <ul class="list">
       <li class="item nav-item" data-ui-sref-active="-active">
         <a class="anchor" data-ui-sref="front">Front Page</a>
